--- a/handWrittenWords.ipynb
+++ b/handWrittenWords.ipynb
@@ -583,7 +583,7 @@
     }
    ],
    "source": [
-    "epochs = 50\n",
+    "epochs = 10 #could be more for a better model\n",
     "\n",
     "model = build_model()\n",
     "prediction_model = keras.models.Model(\n",
@@ -1160,7 +1160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
